--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
+    "joi": "^17.6.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   },
