--- a/package.json
+++ b/package.json
@@ -19,21 +19,27 @@
       "email": "niconieto1506@gmail.com"
     }
   ],
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
+    "hbs": "^4.2.0",
     "joi": "^17.6.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/hbs": "^4.0.1",
     "@types/morgan": "^1.9.3",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   }
