--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^9.1.4",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
     "hbs": "^4.2.0",
