--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./dist/app.js",
-    "start": "node ./dist/app.js"
+    "start": "node ./dist/app.js",
+    "watch": "tsc -w"
   },
   "author": "SPC",
   "contributors": [
@@ -26,10 +27,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
+    "express-validator": "^6.14.2",
     "firebase-admin": "^10.0.2",
     "hbs": "^4.2.0",
     "joi": "^17.6.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.15",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0"
@@ -39,6 +42,7 @@
     "@types/express": "^4.17.13",
     "@types/hbs": "^4.0.1",
     "@types/morgan": "^1.9.3",
+    "@types/nodemailer": "^6.4.4",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "tslint": "^6.1.3",
