--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./dist/app.js",
+    "dev": "nodemon ./dist/app.js && tsc -w",
     "start": "node ./dist/app.js",
     "watch": "tsc -w"
   },
