--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.2",
     "firebase-admin": "^10.0.2",
-    "hbs": "^4.2.0",
     "joi": "^17.6.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.15",
+    "serve-favicon": "^2.5.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0"
   },
@@ -43,6 +43,7 @@
     "@types/hbs": "^4.0.1",
     "@types/morgan": "^1.9.3",
     "@types/nodemailer": "^6.4.4",
+    "@types/serve-favicon": "^2.5.3",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "tslint": "^6.1.3",
