--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./dist/app.js && tsc -w",
     "start": "node ./dist/app.js",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "sonar": "sonar-scanner"
   },
   "author": "SPC",
   "contributors": [
@@ -46,6 +47,7 @@
     "@types/serve-favicon": "^2.5.3",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "sonar-scanner": "^3.1.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   }
